--- a/VE_Open/XML/Shader/SConscript
+++ b/VE_Open/XML/Shader/SConscript
@@ -2,10 +2,9 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv')
-Import('libPath')
+Import('baseEnv libPath ves_pkg LIBDIR')
 
-srcs = Split("""
+sources = Split("""
    TextureImage.cxx
    Uniform.cxx
    Program.cxx
@@ -13,11 +12,28 @@ srcs = Split("""
    ShaderCreator.cxx 
 """)
 
+headers = Split("""
+   TextureImage.h
+   Uniform.h
+   Program.h
+   Shader.h 
+   ShaderCreator.h 
+""")
+
 ##srcs = map(lambda s: pj('#', 'VE_Open', 'XML', 'Shader', s), shader_srcs)
 
-env = baseEnv.Copy()
-env.Append(LIBS = 'VE_XMLLib')
-env.ParseConfig('flagpoll xerces --libs --cflags')
+lib_env = ves_pkg.getEnv().Copy()
+lib_env.Append(LIBS = 'VE_XMLLib')
+lib_env.ParseConfig('flagpoll xerces --libs --cflags')
 
-targetLib = pj( env[ 'LIBDIR' ], 'VE_ShaderLib')
-env.SharedLibrary(target = targetLib, source = srcs)
+if baseEnv['StaticOnly'] == "no":
+   lib = ves_pkg.createStaticAndSharedLibrary('VE_ShaderLib',
+                                                        lib_env,
+                                                        installPrefix = LIBDIR)
+else:
+   lib = ves_pkg.createStaticLibrary('VE_ShaderLib', lib_env,
+                                               installPrefix = LIBDIR)
+   
+lib.addSources(sources)
+lib.addHeaders(headers,  pj( 'VE_Open', 'XML', 'Shader'))
+lib.build()
