--- a/VE_Open/skel/SConscript
+++ b/VE_Open/skel/SConscript
@@ -2,10 +2,16 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv')
-Import('libPath')
+Import('baseEnv libPath ves_pkg LIBDIR')
 
-srcs = Split("""
+headers = Split("""
+   moduleS.h
+   moduleC.h
+   VjObsC.h
+   VjObsS.h
+""")
+
+sources = Split("""
    moduleS.cpp
    moduleC.cpp
    VjObsC.cpp
@@ -13,10 +19,19 @@ srcs = Split("""
 """)
 ##srcs = map(lambda s: pj('#', 'VE_Open', 'skel', s), srcs)
 
-env = baseEnv.Copy()
-env.ParseConfig('flagpoll TAO ACE TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
+lib_env = ves_pkg.getEnv().Copy()
+lib_env.ParseConfig('flagpoll TAO ACE TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
                               TAO_CosNaming TAO_Svc_Utils TAO_IORTable TAO_Messaging \
                               TAO_PortableServer TAO_BiDirGIOP TAO_AnyTypeCode --cflags --libs')
 
-targetLib = pj(env[ 'LIBDIR' ], 'VE_OpenModuleLib')
-env.SharedLibrary(target = targetLib, source = srcs)
+if baseEnv['StaticOnly'] == "no":
+   lib = ves_pkg.createStaticAndSharedLibrary('VE_OpenModuleLib',
+                                                        lib_env,
+                                                        installPrefix = LIBDIR)
+else:
+   lib = ves_pkg.createStaticLibrary('VE_OpenModuleLib', lib_env,
+                                               installPrefix = LIBDIR)
+   
+lib.addSources(sources)
+lib.addHeaders(headers,  pj( 'VE_Open', 'skel'))
+lib.build()
