--- a/VE_Xplorer/DefaultGraphicalPlugin/SConscript
+++ b/VE_Xplorer/DefaultGraphicalPlugin/SConscript
@@ -2,22 +2,33 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv')
-Import('execOsgPatTag')
-Import('libPath')
+Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag')
 
-srcs = Split("""
+sources = Split("""
     DefaultGraphicalPlugin.cxx
 """)
 
-env = baseEnv.Copy()
-env.Append(LIBS = ['VE_SceneGraphLib%s' %(execOsgPatTag),
+headers = Split("""
+    DefaultGraphicalPlugin.h
+""")
+
+lib_env = ves_pkg.getEnv().Copy()
+lib_env.Append(LIBS = ['VE_SceneGraphLib%s' %(execOsgPatTag),
                    'VE_XplorerLib%s' %(execOsgPatTag),
                    'GraphicalPlugin%s' %(execOsgPatTag),
                    'VE_TextureBasedLib%s' %(execOsgPatTag),
                    'VE_UtilLib', 'VE_ModelLib', 'VE_XMLLib', 'VE_CADLib'])
-env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
-env.ParseConfig('flagpoll vtk xerces vrjuggler osg --libs --cflags')
+lib_env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
+lib_env.ParseConfig('flagpoll vtk xerces vrjuggler osg --libs --cflags')
 
-targetLib = pj(env[ 'LIBDIR' ], 'DefaultGraphicalPlugin%s' %(execOsgPatTag))
-env.SharedLibrary(target = targetLib, source = srcs)
+if baseEnv['StaticOnly'] == "no":
+   lib = ves_pkg.createStaticAndSharedLibrary('DefaultGraphicalPlugin%s' %(execOsgPatTag),
+                                                        lib_env,
+                                                        installPrefix = LIBDIR)
+else:
+   lib = ves_pkg.createStaticLibrary('DefaultGraphicalPlugin%s' %(execOsgPatTag), lib_env,
+                                               installPrefix = LIBDIR)
+   
+lib.addSources(sources)
+lib.addHeaders(headers,  pj( 'VE_Xplorer', 'DefaultGraphicalPlugin'))
+lib.build()
