--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -2,12 +2,9 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv')
-Import('Platform')
-Import('libPath')
-Import('execOsgPatTag')
+Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag')
 
-srcs = Split("""
+sources = Split("""
     cfdClone.cxx
     cfdDCS.cxx
     cfdFILE.cxx
@@ -28,11 +25,41 @@ srcs = Split("""
     Text.cxx
 """)
 
+headers = Split("""
+    cfdClone.h
+    cfdDCS.h
+    cfdFILE.h
+    cfdFileInfo.h
+    cfdGeode.h
+    cfdGroup.h
+    cfdNode.h
+    cfdNodeTraverser.h
+    cfdPfSceneManagement.h
+    cfdRawNodeTraverser.h
+    cfdSceneNode.h
+    cfdSequence.h
+    cfdSwitch.h
+    cfdTempAnimation.h
+    vtkActorToOSG.h
+    vtkActorToPF.h
+    Triangles.h
+    Text.h
+""")
+
 ##srcs = map(lambda s: pj('#', 'VE_Xplorer', 'SceneGraph', s), srcs)
 
-env = baseEnv.Copy()
+lib_env = ves_pkg.getEnv().Copy()
 ##env.Append(CPPPATH = [os.getcwd()])
-env.ParseConfig('flagpoll osg gmtl vtk vrjuggler --libs --cflags')
+lib_env.ParseConfig('flagpoll osg gmtl vtk vrjuggler --libs --cflags')
 
-targetLib = pj(env[ 'LIBDIR' ], 'VE_SceneGraphLib%s' %(execOsgPatTag))
-env.SharedLibrary(target = targetLib, source = srcs)
+if baseEnv['StaticOnly'] == "no":
+   lib = ves_pkg.createStaticAndSharedLibrary('VE_SceneGraphLib%s' %(execOsgPatTag),
+                                                        lib_env,
+                                                        installPrefix = LIBDIR)
+else:
+   lib = ves_pkg.createStaticLibrary('VE_SceneGraphLib%s' %(execOsgPatTag), lib_env,
+                                               installPrefix = LIBDIR)
+   
+lib.addSources(sources)
+lib.addHeaders(headers,  pj( 'VE_Xplorer', 'SceneGraph'))
+lib.build()
