--- a/VE_Xplorer/TextureBased/SConscript
+++ b/VE_Xplorer/TextureBased/SConscript
@@ -2,11 +2,9 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv')
-Import('libPath')
-Import('execOsgPatTag')
+Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag')
 
-srcs = Split("""
+sources = Split("""
    cfd3DTextureCullCallback.cxx
    cfdAdvectionSubGraph.cxx
    cfdCopyTo3DTextureStage.cxx
@@ -33,16 +31,51 @@ srcs = Split("""
    cfdVolumeVisualization.cxx
 """)
 
+headers = Split("""
+   cfd3DTextureCullCallback.h
+   cfdAdvectionSubGraph.h
+   cfdCopyTo3DTextureStage.h
+   cfdOSGAdvectionShaderManager.h
+   cfdOSGPingPongTexture3d.h
+   cfdOSGShaderManager.h
+   cfdOSGTransferShaderManager.h
+   cfdPBufferManager.h
+   cfdPBufferQuad.h
+   cfdScalarShaderManager.h
+   cfdScalarVolumeVisHandler.h
+   cfdSimpleTextureCallback.h
+   cfdTextureDataSet.h
+   cfdTextureManager.h
+   cfdTextureMatrixCallback.h
+   cfdUpdateableOSGNoiseTexture3d.h
+   cfdUpdateableOSGTexture1d.h
+   cfdUpdateParameterCallback.h
+   cfdUpdateTextureCallback.h
+   cfdVectorVolumeVisHandler.h
+   cfdVolumeBillboard.h
+   cfdVolumeCenterCallback.h
+   cfdVolumeVisNodeHandler.h
+   cfdVolumeVisualization.h
+""")
+
 ##srcs = map(lambda s: pj('#', 'VE_Xplorer', 'TextureBased', s), srcs)
 
-env = baseEnv.Copy()
-env.Append(LIBS = 'VE_UtilLib')
-env.ParseConfig('flagpoll vtk osg vrjuggler Boost.Filesystem --libs --cflags')
+lib_env = ves_pkg.getEnv().Copy()
+lib_env.Append(LIBS = 'VE_UtilLib')
+lib_env.ParseConfig('flagpoll vtk osg vrjuggler Boost.Filesystem --libs --cflags')
 ##env.ParseConfig('wx-config --cxxflags --libs')
 ##For non-64-bit systems: (64-bits need 'lib64')
 ##env.Append(LIBPATH = [pj('usr', 'X11R6', 'lib')])
 ##env.Append(LIBS = ['X11', 'GL'])
 
-
-targetLib = pj(env[ 'LIBDIR' ], 'VE_TextureBasedLib%s' %(execOsgPatTag))
-env.SharedLibrary(target = targetLib, source = srcs)
+if baseEnv['StaticOnly'] == "no":
+   lib = ves_pkg.createStaticAndSharedLibrary('VE_TextureBasedLib%s' %(execOsgPatTag),
+                                                        lib_env,
+                                                        installPrefix = LIBDIR)
+else:
+   lib = ves_pkg.createStaticLibrary('VE_TextureBasedLib%s' %(execOsgPatTag), lib_env,
+                                               installPrefix = LIBDIR)
+   
+lib.addSources(sources)
+lib.addHeaders(headers,  pj( 'VE_Xplorer', 'TextureBased'))
+lib.build()
