--- a/VE_Xplorer/XplorerNetwork/SConscript
+++ b/VE_Xplorer/XplorerNetwork/SConscript
@@ -2,11 +2,9 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv')
-Import('libPath')
-Import('execOsgPatTag')
+Import('baseEnv libPath ves_pkg LIBDIR execOsgPatTag')
 
-xplorer_srcs = Split("""
+sources = Split("""
    cfdExecutive.cxx
    cfdVEAvailModules.cxx
    cfdVEPluginLoader.cxx
@@ -14,8 +12,16 @@ xplorer_srcs = Split("""
    DeleteObjectFromNetworkEventHandler.cxx
 """)
 
-env = baseEnv.Copy()
-env.Append(LIBS = ['VE_XMLLib', 'VE_CADLib', 'VE_ModelLib',
+headers = Split("""
+   cfdExecutive.h
+   cfdVEAvailModules.h
+   cfdVEPluginLoader.h
+   VE_i.h
+   DeleteObjectFromNetworkEventHandler.h
+""")
+
+lib_env = ves_pkg.getEnv().Copy()
+lib_env.Append(LIBS = ['VE_XMLLib', 'VE_CADLib', 'VE_ModelLib',
                    'VE_SceneGraph_UtilitiesLib', 
                    'VE_SceneGraphLib%s' %(execOsgPatTag),
                    'VE_UtilLib',
@@ -24,13 +30,21 @@ env.Append(LIBS = ['VE_XMLLib', 'VE_CADLib', 'VE_ModelLib',
                    'VE_XplorerLib%s' %(execOsgPatTag),
                    'GraphicalPlugin%s' %(execOsgPatTag)])
 
-env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
-env.ParseConfig('flagpoll vtk xerces osg vrjuggler TAO \
+lib_env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
+lib_env.ParseConfig('flagpoll vtk xerces osg vrjuggler TAO \
                           ACE TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
                           TAO_CosNaming TAO_Svc_Utils TAO_IORTable TAO_Messaging \
                           TAO_PortableServer TAO_BiDirGIOP TAO_AnyTypeCode \
                           --libs --cflags')
 
-targetLib = pj(env[ 'LIBDIR' ], 'VE_XplorerNetworkLib%s' %(execOsgPatTag))
-env.SharedLibrary(target = targetLib, source = xplorer_srcs)
-
+if baseEnv['StaticOnly'] == "no":
+   lib = ves_pkg.createStaticAndSharedLibrary('VE_XplorerNetworkLib%s' %(execOsgPatTag),
+                                                        lib_env,
+                                                        installPrefix = LIBDIR)
+else:
+   lib = ves_pkg.createStaticLibrary('VE_XplorerNetworkLib%s' %(execOsgPatTag), lib_env,
+                                               installPrefix = LIBDIR)
+   
+lib.addSources(sources)
+lib.addHeaders(headers,  pj( 'VE_Xplorer', 'XplorerNetwork'))
+lib.build()
