--- a/VE_Builder/Translator/DataLoader/SConscript
+++ b/VE_Builder/Translator/DataLoader/SConscript
@@ -2,10 +2,9 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv')
-Import('libPath')
+Import('baseEnv libPath ves_pkg LIBDIR')
 
-srcs = Split("""
+sources = Split("""
     DataLoader.cxx
     EnSightTranslator.cxx
     AVSTranslator.cxx
@@ -20,16 +19,40 @@ srcs = Split("""
     ansysReader.cxx
 """)
 
+headers = Split("""
+    DataLoader.h
+    EnSightTranslator.h
+    AVSTranslator.h
+    cfdDICOMTranslator.h
+    cfdREITranslator.h
+    converter.h
+    gridConversion.h
+    plot3dReader.h
+    StarCDTranslator.h
+    starReader.h
+    AnsysTranslator.h
+    ansysReader.h
+""")
+
 if os.getenv('FLUENT_MFIX') == 'TRUE':
     srcs.Append('FluentTranslator.cxx')
     srcs.Append('MFIXTranslator.cxx')
     env.Append(CXXFLAGS = ['-DFLUENT_MFIX'])
 ##srcs = map(lambda s: pj('#', 'VE_Builder', 'Translator', 'DataLoader', s), srcs)
 
-env = baseEnv.Copy()
+lib_env = ves_pkg.getEnv().Copy()
 ##env.Append(CPPPATH = [os.getcwd()])
-env.Append(LIBS = ['VE_UtilLib', 'TranslatorToVTKLib'])
-env.ParseConfig('flagpoll vtk Boost.Filesystem --libs --cflags')
+lib_env.Append(LIBS = ['VE_UtilLib', 'TranslatorToVTKLib'])
+lib_env.ParseConfig('flagpoll vtk Boost.Filesystem --libs --cflags')
 
-targetLib = pj(env[ 'LIBDIR' ], 'DataLoaderLib')
-env.SharedLibrary(target = targetLib, source = srcs)
+if baseEnv['StaticOnly'] == "no":
+   lib = ves_pkg.createStaticAndSharedLibrary('DataLoaderLib',
+                                                        lib_env,
+                                                        installPrefix = LIBDIR)
+else:
+   lib = ves_pkg.createStaticLibrary('DataLoaderLib', lib_env,
+                                               installPrefix = LIBDIR)
+   
+lib.addSources(sources)
+lib.addHeaders(headers,  pj( 'VE_Builder', 'Translator', 'DataLoader'))
+lib.build()
