--- a/VE_Builder/Translator/DataLoader/TestLoader/SConscript
+++ b/VE_Builder/Translator/DataLoader/TestLoader/SConscript
@@ -2,19 +2,20 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv')
-Import('cfdHostType')
-Import('buildDir')
+Import('baseEnv libPath ves_pkg LIBDIR GetPlatform buildDir')
 
 srcs = Split("""
    main.cxx
 """)
 srcs = map(lambda s: pj('#', buildDir, 'VE_Builder', 'Translator', 'DataLoader', s), srcs)
 
-env = baseEnv.Copy()
+env = ves_pkg.getEnv().Copy()
 env.Append(LIBS = ['VE_UtilLib', 'DataLoaderLib', 'TranslatorToVTKLib'])
 
 env.ParseConfig('flagpoll Boost.Filesystem vtk --cflags --libs')
 
-env.Program(pj( env[ 'BINDIR' ],'loaderToVtk'), source = srcs)
+prog = ves_pkg.createProgram('loaderToVtk', env, 'bin')
+prog.addSources( srcs )
+prog.build()
+
 
