--- a/VE_Builder/Translator/cfdTranslatorToVTK/SConscript
+++ b/VE_Builder/Translator/cfdTranslatorToVTK/SConscript
@@ -2,17 +2,29 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv')
-Import('libPath')
+Import('baseEnv libPath ves_pkg LIBDIR')
 
-srcs = Split("""
+sources = Split("""
    cfdTranslatorToVTK.cxx 
+""")
+
+headers = Split("""
+   cfdTranslatorToVTK.h 
 """)
 ##srcs = map(lambda s: pj('#', 'VE_CE', 'Utilities', s), srcs)
 
-env = baseEnv.Copy()
-env.Append(LIBS = ['VE_UtilLib'])
-env.ParseConfig('flagpoll vtk Boost.Filesystem --libs --cflags')
+lib_env = ves_pkg.getEnv().Copy()
+lib_env.Append(LIBS = ['VE_UtilLib'])
+lib_env.ParseConfig('flagpoll vtk Boost.Filesystem --libs --cflags')
 
-targetLib = pj(env[ 'LIBDIR' ], 'TranslatorToVTKLib')
-env.SharedLibrary(target = targetLib, source = srcs)
+if baseEnv['StaticOnly'] == "no":
+   lib = ves_pkg.createStaticAndSharedLibrary('TranslatorToVTKLib',
+                                                        lib_env,
+                                                        installPrefix = LIBDIR)
+else:
+   lib = ves_pkg.createStaticLibrary('TranslatorToVTKLib', lib_env,
+                                               installPrefix = LIBDIR)
+   
+lib.addSources(sources)
+lib.addHeaders(headers,  pj( 'VE_Builder', 'Translator', 'cfdTranslatorToVTK'))
+lib.build()
