adding FindDialog to the pj

--- a/VE_Conductor/GUIPlugin/GUIPluginLib.vcproj
+++ b/VE_Conductor/GUIPlugin/GUIPluginLib.vcproj
@@ -218,6 +218,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\FindDialog.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Geometry.cpp"
 				>
 			</File>
